# Hatlab

./: Hatlab.cabal  LICENSE  README.md
Examples/: Parametric.hs
src/Hatlab/: AD.hs  Derivatives.hs  Expression.hs  ParametricCurves.hs  ParametrizedCurves.hs  Plot.hs  Relations.hs  SimplifyUniplate.hs  Tests.hs
src/Hatlab/Expression/: Uniplate.hs
tests/: Tests.hs
