name:                Hatlab
version:             0.2.1
-- homepage:            http://github.com/githubuser/Hatlab#readme
-- license:             BSD3
-- license-file:        LICENSE
author:              Björn von Sydow
-- maintainer:          example@example.com
-- copyright:           2015 Author Here
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src, .
  exposed-modules:     Hatlab.Plot,
                       Hatlab.Relations,
                       Hatlab.ParametricCurves,
                       Examples.Shapes,
                       Examples.Parametric,
                       Examples.Sets
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , process
  default-language:    Haskell2010
